Provide missing 'isJsFile' property tester for IEditorInput
Review URL: http://codereview.chromium.org/7104124

--- a/plugins/org.chromium.debug.ui/plugin.xml
+++ b/plugins/org.chromium.debug.ui/plugin.xml
@@ -453,4 +453,14 @@
             id="org.chromium.debug.core.jsnature.image">
       </image>
    </extension>
+  
+  <extension point="org.eclipse.core.expressions.propertyTesters">
+    <propertyTester
+       namespace="org.chromium.debug.core"
+       id="org.chromium.debug.ui.propertypages.FileEditorInputPropertyTester"
+       properties="isJsFile"
+       type="org.eclipse.ui.IFileEditorInput"
+       class="org.chromium.debug.ui.propertypages.FileEditorInputPropertyTester">
+    </propertyTester>
+  </extension>
 </plugin>
