--- a/plugins/org.chromium.debug.core/plugin.xml
+++ b/plugins/org.chromium.debug.core/plugin.xml
@@ -72,7 +72,7 @@
       id="org.chromium.debug.core.VProjectSourceContainer.type"
       description="Remote V8/Chrome VM JavaScript Scripts">
     </sourceContainerType>
-   </extension>
+  </extension>
 
   
   <extension point="org.eclipse.debug.core.sourceContainerTypes">
@@ -82,16 +82,16 @@
       id="org.chromium.debug.core.SourceNameMapperContainer.type"
       description="%SourceNameMapperContainer.description">
     </sourceContainerType>
-   </extension>
+  </extension>
   
   <extension point="org.eclipse.core.expressions.propertyTesters">
     <propertyTester
        namespace="org.chromium.debug.core"
-       id="org.chromium.debug.core.FilePropertyTester"
+       id="org.chromium.debug.core.FilePropertyTester$ForFile"
        properties="isJsFile"
        type="org.eclipse.core.resources.IFile"
-       class="org.chromium.debug.core.FilePropertyTester">
-     </propertyTester>
+       class="org.chromium.debug.core.FilePropertyTester$ForFile">
+    </propertyTester>
   </extension>
 
   <extension-point id="model_JavaScriptFormatter"
