--- a/plugins/org.chromium.sdk/build.properties
+++ b/plugins/org.chromium.sdk/build.properties
@@ -4,6 +4,9 @@ bin.includes = META-INF/,\
                LICENSE
 jars.compile.order = .
 source.. = src/,\
-           src-wip/
+           src-wip/,\
+           src-dynamic-impl/bridge/,\
+           src-dynamic-impl/parser/,\
+           src-wip-generated/
 output.. = bin/
 src.includes = LICENSE
