--- a/trunk/plugins/org.chromium.debug.ui/plugin.properties
+++ b/trunk/plugins/org.chromium.debug.ui/plugin.properties
@@ -19,6 +19,7 @@ PinPointValueAction.label = Pin-Point Value...
 TemporarilyFormatAction.label = Temporarily Format Source
 
 BreakpointProperties.name = Breakpoint Properties
+BreakpointTechnicalInfo.name = Technical Info
 V8JsScript.name = V8 JavaScript Script
 
 ChromiumSourceFileActionsId.menu.label = V8 Debugging
