--- a/plugins/org.chromium.debug.ui/plugin.properties
+++ b/plugins/org.chromium.debug.ui/plugin.properties
@@ -8,7 +8,7 @@ pluginName = Chromium JavaScript Remote Debugger UI
 
 chromiumLaunchName = Chromium JavaScript
 standaloneV8LaunchName = Standalone V8 VM
-wipLaunchName = WebInspector Protocol (WIP)
+wipLaunchName = WebKit Protocol (experimental)
 consolePseudoLaunchName = Browser Connection
 
 ChromiumJavascriptDecorator.label = Chromium JavaScript Decorator
