Add static parser to DevTools protocol
Review URL: http://codereview.chromium.org/7410006

--- a/plugins/org.chromium.sdk/build.properties
+++ b/plugins/org.chromium.sdk/build.properties
@@ -5,8 +5,9 @@ bin.includes = META-INF/,\
 jars.compile.order = .
 source.. = src/,\
            src-wip/,\
-           src-dynamic-impl/bridge/,\
+           src-wip-generated/,\
+           src-static-impl/generated/,\
            src-dynamic-impl/parser/,\
-           src-wip-generated/
+           src-static-impl/bridge/
 output.. = bin/
 src.includes = LICENSE
