--- a/trunk/plugins/org.chromium.debug.ui/plugin.properties
+++ b/trunk/plugins/org.chromium.debug.ui/plugin.properties
@@ -32,5 +32,6 @@ SynchronizeBreakpoints.ResetLocal.label = Reset on Local
 SynchronizeBreakpoints.Merge.label = Merge Remote and Local
 
 ExceptionBreakpoints.menu.label = Break on JavaScript Exceptions
-ExceptionBreakpoints.Caught.label = Caught
+ExceptionBreakpoints.All.label = All
 ExceptionBreakpoints.Uncaught.label = Uncaught
+ExceptionBreakpoints.None.label = None
