--- a/wipbackend/plugins/org.chromium.sdk.wipbackend.wk92284/build.properties
+++ b/wipbackend/plugins/org.chromium.sdk.wipbackend.wk92284/build.properties
@@ -1,4 +1,7 @@
-source.. = src/
+source.. = src/,\
+           src-dynamic-impl/bridge/,\
+           src-dynamic-impl/parser/,\
+           src-wip-generated/
 output.. = bin/
 bin.includes = META-INF/,\
                .
