--- a/branches/experimental/wipbackend/plugins/org.chromium.sdk/build.properties
+++ b/branches/experimental/wipbackend/plugins/org.chromium.sdk/build.properties
@@ -5,8 +5,7 @@ bin.includes = META-INF/,\
 jars.compile.order = .
 source.. = src/,\
            src-wip/,\
-           src-static-impl/generated/,\
            src-dynamic-impl/parser/,\
-           src-static-impl/bridge/
+           src-dynamic-impl/bridge/
 output.. = bin/
 src.includes = LICENSE
