--- a/branches/experimental/wipbackend/plugins/org.chromium.sdk.wipbackend.wk87771/build.properties
+++ b/branches/experimental/wipbackend/plugins/org.chromium.sdk.wipbackend.wk87771/build.properties
@@ -5,3 +5,4 @@ source.. = src/,\
 output.. = bin/
 bin.includes = META-INF/,\
                .
+jars.extra.classpath = platform:/plugin/org.chromium.sdk/lib/json_simple/json_simple-1.1.jar
