--- a/wipbackend/features/org.chromium.sdk.wip.source/.project
+++ b/wipbackend/features/org.chromium.sdk.wip.source/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.chromium.sdk.wipbackends.source</name>
+	<name>org.chromium.sdk.wip.source</name>
 	<comment></comment>
 	<projects>
 	</projects>
