fix source feature

--- a/branches/experimental/wipbackend/features/org.chromium.sdk.wip.source/build.properties
+++ b/branches/experimental/wipbackend/features/org.chromium.sdk.wip.source/build.properties
@@ -3,6 +3,4 @@ bin.includes = feature.xml,\
                LICENSE,\
 			               license.html
 
-generate.feature@org.chromium.sdk.source=org.chromium.sdk
-generate.feature@org.chromium.debug.source=org.chromium.debug
-generate.feature@org.chromium.debug.jsdtbridge.source=org.chromium.debug.jsdtbridge
+generate.feature@org.chromium.sdk.wipbackends.source=org.chromium.sdk.wipbackends
