Fix plugin build props
Review URL: http://codereview.chromium.org/7646030

--- a/branches/experimental/wipbackend/plugins/org.chromium.sdk.wipbackend.wk87771/build.properties
+++ b/branches/experimental/wipbackend/plugins/org.chromium.sdk.wipbackend.wk87771/build.properties
@@ -4,3 +4,7 @@ source.. = src/,\
            src-wip-generated/
 output.. = bin/
 bin.includes = META-INF/,\
+               c,\
+               plugin.xml
+src.includes = plugin.xml
+
