--- a/wipbackend/plugins/org.chromium.sdk.wipbackend.wk87771/build.properties
+++ b/wipbackend/plugins/org.chromium.sdk.wipbackend.wk87771/build.properties
@@ -4,3 +4,7 @@ source.. = src/,\
            src-wip-generated/
 output.. = bin/
 bin.includes = META-INF/,\
+               c,\
+               plugin.xml
+src.includes = plugin.xml
+
