--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ plugins/org.chromium.sdk.tests/bin
 plugins/org.chromium.sdk/.settings
 plugins/org.chromium.sdk/bin
 plugins/org.chromium.sdk/build-output
+plugins/org.chromium.sdk.wip.eclipse/.settings
+plugins/org.chromium.sdk.wip.eclipse/bin
+plugins/org.chromium.sdk.wipbackend.wk87771/.settings
+plugins/org.chromium.sdk.wipbackend.wk87771/bin
 plugins/org.chromium.debug.jsdtbridge/.settings
 plugins/org.chromium.debug.jsdtbridge/bin
 utils/org.chromium.sdk.tests.system/.settings
