--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ plugins/org.chromium.sdk.wipbackend.wk87771/.settings
 plugins/org.chromium.sdk.wipbackend.wk87771/bin
 plugins/org.chromium.sdk.wipbackend.wk91698/.settings
 plugins/org.chromium.sdk.wipbackend.wk91698/bin
+plugins/org.chromium.sdk.wipbackend.wk93101/.settings
+plugins/org.chromium.sdk.wipbackend.wk93101/bin
 plugins/org.chromium.sdk.wipbackend.dev/.settings
 plugins/org.chromium.sdk.wipbackend.dev/bin
 plugins/org.chromium.debug.jsdtbridge/.settings
