--- a/utils/org.chromium.sdk.tests.system/build.xml
+++ b/utils/org.chromium.sdk.tests.system/build.xml
@@ -21,7 +21,7 @@
     </copy>
     <jar destfile="${dest-dir}/chromedevtools.systemtest.jar" basedir="${bin-dir}">
       <manifest>
-        <attribute name="Class-Path" value="./lib.org.chromium.sdk.jar"/>
+        <attribute name="Class-Path" value="./lib.org.chromium.sdk.jar ./lib.org.chromium.sdk.wipbackend.wk93101.jar"/>
         <attribute name="Main-Class" value="org.chromium.sdk.tests.system.Main"/>
       </manifest>
   	</jar>
