Link system tests to WIP backend
Review URL: http://codereview.chromium.org/7698007

--- a/trunk/utils/org.chromium.sdk.tests.system/.classpath
+++ b/trunk/utils/org.chromium.sdk.tests.system/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.chromium.sdk"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.chromium.sdk.wipbackend.wk87771"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.chromium.sdk.wipbackend.dev"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
