--- a/plugins/org.chromium.sdk.wipbackend.wk102439/.project
+++ b/plugins/org.chromium.sdk.wipbackend.wk102439/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.chromium.sdk.wipbackend.dev</name>
+	<name>org.chromium.sdk.wipbackend.wk102439</name>
 	<comment></comment>
 	<projects>
 	</projects>
