--- a/trunk/plugins/org.chromium.debug.ui/plugin.properties
+++ b/trunk/plugins/org.chromium.debug.ui/plugin.properties
@@ -14,6 +14,7 @@ consolePseudoLaunchName = Browser Connection
 ChromiumJavascriptDecorator.label = Chromium JavaScript Decorator
 
 OpenFunctionAction.label = Open Function
+WatchPropertyDescriptor.label = Watch Property Descriptor
 LoadFullValueAction.label = Load Full Value
 PinPointValueAction.label = Pin-Point Value...
 TemporarilyFormatAction.label = Temporarily Format Source
