Prepare WIP backend for protocol v. 1.0
Review URL: https://chromiumcodereview.appspot.com/9460018

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ plugins/org.chromium.sdk.wipbackend.wk97678/.settings
 plugins/org.chromium.sdk.wipbackend.wk97678/bin
 plugins/org.chromium.sdk.wipbackend.wk102439/.settings
 plugins/org.chromium.sdk.wipbackend.wk102439/bin
+plugins/org.chromium.sdk.wipbackend.protocol_1_0/.settings
+plugins/org.chromium.sdk.wipbackend.protocol_1_0/bin
 plugins/org.chromium.sdk.wipbackend.dev/.settings
 plugins/org.chromium.sdk.wipbackend.dev/bin
 plugins/org.chromium.debug.jsdtbridge/.settings
