--- a/trunk/plugins/org.chromium.sdk.wipbackend.protocol_1_0/.project
+++ b/trunk/plugins/org.chromium.sdk.wipbackend.protocol_1_0/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.chromium.sdk.wipbackend.wk102439</name>
+	<name>org.chromium.sdk.wipbackend.protocol_1_0</name>
 	<comment></comment>
 	<projects>
 	</projects>
