--- a/plugins/org.chromium.sdk.wipbackend.wk102439/build.properties
+++ b/plugins/org.chromium.sdk.wipbackend.wk102439/build.properties
@@ -1,7 +1,7 @@
 source.. = src/,\
-           src-dynamic-impl/bridge/,\
-           src-dynamic-impl/parser/,\
-           src-wip-generated/
+           src-wip-generated/,\
+           src-static-impl/bridge/,\
+           src-static-impl/generated/
 output.. = bin/
 bin.includes = META-INF/,\
                c,\
