Add upload libs task to build.xml
Review URL: https://chromiumcodereview.appspot.com/10699049

--- a/builder/build.properties
+++ b/builder/build.properties
@@ -11,3 +11,4 @@ baseLocation=${pdeEclipseLocation}
 # The location of rt.jar in the build environment
 java.rt=FILL THIS VALUE
 
+code.google.com.username=FILL THIS VALUE
