--- a/trunk/builder/build.properties
+++ b/trunk/builder/build.properties
@@ -11,3 +11,4 @@ baseLocation=${pdeEclipseLocation}
 # The location of rt.jar in the build environment
 java.rt=FILL THIS VALUE
 
+code.google.com.username=FILL THIS VALUE
