--- a/plugins/org.chromium.debug.ui/plugin.properties
+++ b/plugins/org.chromium.debug.ui/plugin.properties
@@ -36,3 +36,7 @@ ExceptionBreakpoints.menu.label = Break on JavaScript Exceptions
 ExceptionBreakpoints.All.label = All
 ExceptionBreakpoints.Uncaught.label = Uncaught
 ExceptionBreakpoints.None.label = None
+
+DebugActionSet.label = V8/Chrome Debug Actions
+AddExceptionBreakpoint.label = Add V8/Chrome JavaScript Exception Breakpoint
+BreakpointProperties.action = Breakpoint Properties... 
